  The following code now raises a SyntaxError:  foo(a = i for i in range(10))

- SF Bug #976608: fix SystemError when mtime of an imported file is -1.

- SF Bug #887946: fix segfault when redirecting stdin from a directory.
  Provide a warning when a directory is passed on the command line.

- Fix segfault with invalid coding.

Extension Modules
-----------------

- Patch #1407135, bug #1424041: mmap.mmap(-1, size, ...) can return
  anonymous memory again on Unix.

- Bug #1215432: in bsddb DB.associate() would crash when a DBError
  was supposed to be raised.

- Fix 64-bit problems in bsddb.

- Bug #1290333: Added a workaround for cjkcodecs' _codecs_cn build
  problem on AIX.

- Bug #869197: os.setgroups rejects long integer arguments

- Bug #1344508, Fix UNIX mmap leaking file descriptors

- Patch #1338314, Bug #1336623: fix tarfile so it can extract
  REGTYPE directories from tarfiles written by old programs.

- Patch #1309009, Fix segfault in pyexpat when the XML document is in latin_1,
  but Python incorrectly assumes it is in UTF-8 format

- Fix parse errors in the readline module when compiling without threads.

Library
-------

- Bug #1371247: Update Windows locale identifiers in locale.py.

- Bug #1394565: SimpleHTTPServer now doesn't choke on query parameters
  any more.

- Bug #1403410: The warnings module now doesn't get confused
  when it can't find out the module name it generates a warning for.

- Patch #1117398: cookielib.LWPCookieJar and .MozillaCookieJar now raise
  LoadError as documented, instead of IOError.  For compatibility,
  LoadError subclasses IOError.

- Bug #1365984: urllib now opens "data:" URLs again.

- Patch #1314396: Prevent threading.Thread.join() from blocking if a previous
  call caused an exception to be raised (e.g., calling join() with an illegal
  argument).

- urllib.unquote() now handles Unicode strings correctly.  Formerly, it would
  either ignore the substitution or raise UnicodeDecodeError.
